# yap_ugc

./: .env.docker  .env.expample  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  gunicorn.conf.py  pyproject.toml  setup.cfg
.github/workflows/: ugc.yaml
app/: main.py
app/api/v1/: user_events.py
app/config/: logger.py  settings.py
app/db/: kafka.py
app/models/: basemodel.py  user_events.py
app/services/: commons.py  user_film.py
benchmark/: README.md  data_gen.py  generate_data.py  test_clickhouse.py
clickhouse/: README.md  docker-compose.override.yml  docker-compose.yml
clickhouse/data/node1/: config.xml
clickhouse/data/node1/docker-entrypoint-initdb.d/: init-db.shx
clickhouse/data/node2/: config.xml
clickhouse/data/node3/: config.xml
clickhouse/data/node4/: config.xml
confluent/: README.md  docker-compose.override.yml  docker-compose.yml
docs/: arch.wsd
nginx/: nginx.conf
nginx/conf.d/: site.conf
tests/: rest api calls.http
