[tool.poetry]
name = "yap_ugc"
version = "0.1.0"
description = ""
authors = ["Maxim B. <wedontask@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.85.1"
confluent-kafka = "1.9.2"
pydantic = "1.10.2"
uvicorn = "^0.19.0"
orjson = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
