[tool.poetry]
name = "yap_ugc"
version = "0.1.0"
description = ""
authors = ["Maxim B. <wedontask@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.85.1"
pydantic = "1.10.2"
uvicorn = "^0.19.0"
orjson = "^3.8.1"
kafka-python = "^2.0.2"
gunicorn = "^20.1.0"
aiokafka = "^0.7.2"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
clickhouse-driver = "^0.2.4"
black = "^22.10.0"
flake8 = "^5.0.4"
aioch = "^0.0.2"
faker = "^15.1.4"
asynch = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
